crates/vikado-renderer/tests/snapshots/graph_snapshots__ass_aligned_text.snap
---
source: crates/vikado-renderer/tests/graph_snapshots.rs
assertion_line: 337
expression: doc.content
---
[Script Info]
ScriptType: v4.00+
PlayResX: 1920
PlayResY: 1080
WrapStyle: 2
ScaledBorderAndShadow: yes

[V4+ Styles]
Format: Name, Fontname, Fontsize, PrimaryColour, SecondaryColour, OutlineColour, BackColour, Bold, Italic, Underline, StrikeOut, ScaleX, ScaleY, Spacing, Angle, BorderStyle, Outline, Shadow, Alignment, MarginL, MarginR, MarginV, Encoding
Style: T0,Inter,72,&H00FFFFFF,&H00FFFFFF,&H00000000,&H00000000,-1,0,0,0,100,100,0,0,1,2,0,4,0,0,0,1
Style: T1,Inter,72,&H00FFFFFF,&H00FFFFFF,&H00000000,&H00000000,-1,0,0,0,100,100,0,0,1,2,0,5,0,0,0,1
Style: T2,Inter,72,&H00FFFFFF,&H00FFFFFF,&H00000000,&H00000000,-1,0,0,0,100,100,0,0,1,2,0,6,0,0,0,1
Style: T3,Inter,72,&H00FFFFFF,&H00FFFFFF,&H00000000,&H00000000,-1,0,0,0,100,100,0,0,1,2,0,5,0,0,0,1

[Events]
Format: Layer, Start, End, Style, Name, MarginL, MarginR, MarginV, Effect, Text
Dialogue: 1,0:00:00.00,0:00:03.00,T0,,0,0,0,,{\pos(627,460)\fscx150\fscy150}Two lines of\Ndifferent width
Dialogue: 1,0:00:00.00,0:00:03.00,T1,,0,0,0,,{\pos(1080,460)\fscx150\fscy150}Two lines of\Ndifferent width
Dialogue: 1,0:00:00.00,0:00:03.00,T2,,0,0,0,,{\pos(1533,460)\fscx150\fscy150}Two lines of\Ndifferent width
Dialogue: 1,0:00:00.00,0:00:03.00,T3,,0,0,0,,{\pos(1080,460)\fscx150\fscy150}Two lines of\Ndifferent width
