crates/vikado-renderer/tests/snapshots/graph_snapshots__export_downscale_appends_final_scale.snap
---
source: crates/vikado-renderer/tests/graph_snapshots.rs
expression: g.script
---
[0:v]trim=start=0:end=5,setpts=PTS-STARTPTS,fps=30,format=rgba,scale=w='min(1920/iw\,1080/ih)*iw*1':h='min(1920/iw\,1080/ih)*ih*1':eval=init,setpts=PTS+0/TB[c0];
color=c=0x000000:s=1920x1080:r=30:d=5[base0];
[base0][c0]overlay=x='(main_w-overlay_w)/2+0':y='(main_h-overlay_h)/2+0':eof_action=pass:enable='between(t,0,5)'[base1];
[base1]null[vout];
[vout]scale=960:540:flags=lanczos[vscaled];
[0:a]atrim=start=0:end=5,asetpts=PTS-STARTPTS,aresample=48000,aformat=channel_layouts=stereo,adelay=0|0[a0];
anullsrc=r=48000:cl=stereo:d=5[asilence];
[asilence][a0]amix=inputs=2:duration=first:normalize=0[aout]
